Upgraded to Java 16. Replaced Gson with Jackson to get record support.