@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>se.dykstrom.javafx</groupId>
     <artifactId>javafx-dad-joke</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
         <junit.version>5.5.2</junit.version>
         <javafx.version>14</javafx.version>
     </properties>
@@ -30,9 +30,9 @@
             <version>2.0.1</version>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.3</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -60,18 +60,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
                 <configuration>
-                    <argLine>--add-opens se.dykstrom.javafx.dadjoke/se.dykstrom.javafx.dadjoke.rest=ALL-UNNAMED --enable-preview</argLine>
+                    <argLine>--add-opens se.dykstrom.javafx.dadjoke/se.dykstrom.javafx.dadjoke.rest=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -81,9 +76,6 @@
                 <configuration>
                     <mainClass>se.dykstrom.javafx.dadjoke.App</mainClass>
                     <executable>${java.home}/bin/java</executable>
-                    <options>
-                        <option>--enable-preview</option>
-                    </options>
                 </configuration>
             </plugin>
         </plugins>
